[pom] Remove long obsolete jdk attach allow attach self
at least as our usage goes this provides no value.